# aws-physical-ai-recipes

./: .gitignore  README.md
groot-sm-training/: README.md
groot-sm-training/data/: convert_v3_to_v2.py
groot-sm-training/infra/: cloudformation.yaml
groot-sm-training/scripts/: build_local.sh
isaac-lab-workshop/: README.md
isaac-lab-workshop/gr00t-inference/: README.md  pyproject.toml  test_inference.py  test_inference_remote.py
isaac-lab-workshop/infra-groot-finetune/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
isaac-lab-workshop/infra-multiuser-groot/: .gitignore  README.md
isaac-lab-workshop/newton-setup/: README.md  requirements.txt  setup.sh
isaac-lab-ws/: isaaclab-setup.md  setup_newton.sh
isaac-lab-ws/infra-multiuser-groot/: README.md  tsconfig.json
isaac-lab-ws/mlops-dashboard/: .env.local.example  .gitignore  README.md  index.html  next.config.js  (+4 more)
osmo/: README.md
sagemaker-vla/: GUIDE.md  README.md  config.yaml  requirements-dev.txt
simulation/isaac-lab/workshop/: README.md  VERIFICATION_NOTES.md  pyproject.toml  setup.sh
simulation/isaac-lab/workshop/batch/: Dockerfile.groot
simulation/isaac-lab/workshop/configs/: modality.json  so101_modality_config.py
simulation/isaac-lab/workshop/src/workshop/: __init__.py
simulation/isaac-lab/workshop/src/workshop/robots/: __init__.py  so_arm101.py
simulation/isaac-lab/workshop/src/workshop/scripts/: collect_demos.py  convert_to_lerobot.py  convert_urdf_to_usd.py  download_hf_dataset.py  list_envs.py  patch_mujoco_warp.py  play_rl.py  run_closed_loop.py  train_rl.py  upload_s3.py
simulation/isaac-lab/workshop/src/workshop/tasks/: __init__.py  mdp_terms.py
simulation/isaac-lab/workshop/src/workshop/tasks/lift/: __init__.py  lift_env_cfg.py
simulation/isaac-lab/workshop/src/workshop/tasks/lift/agents/: __init__.py
simulation/isaac-lab/workshop/src/workshop/tasks/reach/: __init__.py  reach_env_cfg.py
simulation/isaac-lab/workshop/src/workshop/tasks/reach/agents/: rsl_rl_ppo_cfg.py
tools/: 01-setup-ssh-client.ps1  02-setup-bedrock-env.sh  03-setup-plugins-and-mcp.sh  README.md
(+246 files in other folders)
